infra/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-gis-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react-gis-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-gis-app-service
                port:
                  number: 80
    - host: api-gis-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coordinates-api-service
                port:
                  number: 80
    - host: socket-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: socket-server-service
                port:
                  number: 80
